--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "allowJs": true,
     "target": "ES6",
     "skipLibCheck": true,
-    "strict": true,
+    "strict": false, // ここを false に変更
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
