--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "next-themes": "^0.4.4",
     "playfab-sdk": "^2.170.250314",
     "react": "^18.0.0",
+    "react-confetti": "^6.4.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.54.1",
@@ -60,6 +61,7 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "use-sound": "^5.0.0",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
