認証方法をfirebaseに変更

--- a/package.json
+++ b/package.json
@@ -47,13 +47,14 @@
     "date-fns": "^3.0.0",
     "embla-carousel-react": "8.5.1",
     "firebase": "^11.6.0",
+    "firebase-admin": "^13.2.0",
     "framer-motion": "^12.6.3",
     "input-otp": "1.4.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
-    "playfab-sdk": "^2.170.250314",
+    "playfab-sdk": "^2.171.250328",
     "react": "^18.0.0",
     "react-confetti": "^6.4.0",
     "react-day-picker": "8.10.1",
