--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@google-cloud/vision": "^5.1.0",
     "@hookform/resolvers": "^3.9.1",
     "@mui/material": "^7.0.1",
     "@radix-ui/react-accordion": "^1.2.3",
